@@ -40,9 +40,7 @@ public class CascadeAction extends CascadeInternalFramesAction
 	{
 		super(app);
 		_app = app;
-		app.getResources().setupAction(
-			this,
-			_app.getSquirrelPreferences().getShowColoriconsInToolbar());
+		app.getResources().setupAction(this);
 	}
 
 	public void actionPerformed(ActionEvent evt)
